--- a/templates/authentication/layouts/base-fullscreen.html
+++ b/templates/authentication/layouts/base-fullscreen.html
@@ -18,7 +18,7 @@
   <link rel="canonical" href="https://appseed.us/admin-dashboards/django-dashboard-argon">
   
   <title>
-    Django Argon Dashboard - {% block title %} Open-Source Admin Panel {% endblock %} | AppSeed
+        {% block title %}{% endblock %} | MusicEngine S.L. | UdL
   </title>
 
   <link rel="icon" href="/static/assets/img/brand/favicon.png" type="image/png">
@@ -49,11 +49,10 @@
             <div class="col-lg-5 col-md-6">
               <h1 class="text-white">
                 <a target="_blank" class="text-white"
-                   href="https://appseed.us/admin-dashboards/django-dashboard-argon">Django Argon</a>
+                   href="https://appseed.us/admin-dashboards/django-dashboard-argon">Music Engine S.L.</a>
               </h1>
               <p class="text-lead text-light">
-                Open-Source Flask Starter with Argon Design 
-                Coded by <a target="_blank" class="text-white" href="https://appseed.us">AppSeed</a>.  
+                Lloguer i gestió de sales musicals.
               </p>
             </div>
           </div>
