--- a/templates/authentication/includes/navigation-fullscreen.html
+++ b/templates/authentication/includes/navigation-fullscreen.html
@@ -1,8 +1,8 @@
 <nav id="navbar-main" class="navbar navbar-horizontal navbar-transparent navbar-main navbar-expand-lg navbar-light">
   <div class="container">
-    <a class="navbar-brand" href="{% url 'home_back' %}">
+    <!--<a class="navbar-brand" href="{% url 'home_back' %}">
       <img src="/static/assets/img/brand/white.png" alt="Argon Design - Template Starter Logo.">
-    </a>
+    </a>-->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -10,9 +10,9 @@
       <div class="navbar-collapse-header">
         <div class="row">
           <div class="col-6 collapse-brand">
-            <a href="{% url 'home_back' %}">
+            <!--<a href="{% url 'home_back' %}">
               <img src="/static/assets/img/brand/blue.png">
-            </a>
+            </a>-->
           </div>
           <div class="col-6 collapse-close">
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,17 +25,17 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a href="{% url 'login' %}" class="nav-link">
-            <span class="nav-link-inner--text">Login</span>
+            <span class="nav-link-inner--text">Entrar</span>
           </a>
         </li>
-        <!--<li class="nav-item">
-          <a href="" class="nav-link">
-            <span class="nav-link-inner--text">Register</span>
+        <li class="nav-item">
+          <a href="{% url 'register' %}" class="nav-link">
+            <span class="nav-link-inner--text">Registrar</span>
           </a>
-        </li>-->
+        </li>
       </ul>
       <hr class="d-lg-none" />
-      <ul class="navbar-nav align-items-lg-center ml-lg-auto">
+      <!--<ul class="navbar-nav align-items-lg-center ml-lg-auto">
         <li class="nav-item">
           <a class="nav-link nav-link-icon" href="https://www.facebook.com/webappseed" 
              target="_blank" data-toggle="tooltip" data-original-title="Like us on Facebook">
@@ -59,7 +59,7 @@
             <span class="nav-link-inner--text">PRO Version</span>
           </a>
         </li>
-      </ul>
+      </ul>-->
     </div>
   </div>
 </nav>
