--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -1,6 +1,6 @@
 {% extends 'authentication/layouts/base-fullscreen.html' %}
 
-{% block title %} Login {% endblock title %}
+{% block title %} Entrar {% endblock title %}
 
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -14,7 +14,7 @@
           <div class="card bg-secondary shadow border-0">
             <div class="card-header bg-transparent pb-5">
               <div class="text-muted text-center mt-2 mb-3">
-                Sign IN
+                Entrar
               </div>
             </div>
             <div class="card-body px-lg-5 py-lg-5">
@@ -24,7 +24,7 @@
                   <p>{{ msg }}</p>
                 {% else %}
                   <p>
-                    Add your credentials
+                    Fica les credencials
                   </p>
                 {% endif %}  
 
@@ -53,21 +53,21 @@
                 <div class="custom-control custom-control-alternative custom-checkbox">
                   <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
                   <label class="custom-control-label" for=" customCheckLogin">
-                    <span class="text-muted">Remember me</span>
+                    <span class="text-muted">Recorda'm</span>
                   </label>
                 </div>
                 <div class="text-center">
-                  <button type="submit" class="btn btn-primary my-4">Sign in</button>
+                  <button type="submit" class="btn btn-primary my-4">Entrar</button>
                 </div>
               </form>
             </div>
           </div>
           <div class="row mt-3">
             <div class="col-6">
-              <!--<a href="" class="text-light"><small>Register</small></a>-->
+              <a href="{% url 'register' %}" class="text-light"><small>Registrar</small></a>
             </div>
             <div class="col-6 text-right">
-              <a href="https://appseed.us/support" class="text-light"><small>Get Support</small></a>
+              <!--<a href="https://appseed.us/support" class="text-light"><small>Get Support</small></a>-->
             </div>
           </div>
         </div>
