--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -1,6 +1,6 @@
 {% extends 'authentication/layouts/base-fullscreen.html' %}
 
-{% block title %} Register {% endblock title %}
+{% block title %} Registrar {% endblock title %}
 
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -16,7 +16,7 @@
           <div class="card bg-secondary shadow border-0">
             <div class="card-header bg-transparent pb-5">
               <div class="text-muted text-center mt-2 mb-4">
-                Sign UP
+                Registre
               </div>
             </div>
             <div class="card-body px-lg-5 py-lg-5">
@@ -25,7 +25,7 @@
                 {% if msg %}
                   <small>{{ msg | safe }}</small>
                 {% else %}
-                  Add your credentials
+                  Fica les credencials
                 {% endif %}  
               
               </div>
@@ -81,13 +81,13 @@
                       <div class="custom-control custom-control-alternative custom-checkbox">
                         <input class="custom-control-input" id="customCheckRegister" type="checkbox">
                         <label class="custom-control-label" for="customCheckRegister">
-                          <span class="text-muted">I agree with the <a href="#!">Privacy Policy</a></span>
+                          <span class="text-muted">Estic d'acord amb la <a href="#!">Política de Privacitat</a></span>
                         </label>
                       </div>
                     </div>
                   </div>
                   <div class="text-center">
-                    <button type="submit" class="btn btn-primary mt-4">Create account</button>
+                    <button type="submit" class="btn btn-primary mt-4">Crear</button>
                   </div>
                 </form>
 
@@ -102,11 +102,11 @@
       <div class="row mt-3">
         <div class="col-3"></div>
         <div class="col-3">
-          <a href="{% url 'login' %}" class="text-light"><small>Login</small></a>
+          <a href="{% url 'login' %}" class="text-light"><small>Entrar</small></a>
         </div>
-        <div class="col-3 text-right">
+        <!--<div class="col-3 text-right">
           <a href="https://appseed.us/support" class="text-light"><small>Get Support</small></a>
-        </div>
+        </div>-->
       </div>
 
     </div>
