--- a/templates/backoffice/layouts/base-fullscreen.html
+++ b/templates/backoffice/layouts/base-fullscreen.html
@@ -18,7 +18,7 @@
     <link rel="canonical" href="https://appseed.us/admin-dashboards/django-dashboard-argon">
 
     <title>
-        Django Argon Dashboard - {% block title %} Open-Source Admin Panel {% endblock %} | AppSeed
+        {% block title %}{% endblock %} | MusicEngine S.L. | UdL
     </title>
 
     <link rel="icon" href="/static/assets/img/brand/favicon.png" type="image/png">
