--- a/templates/backoffice/includes/sidenav-gestor.html
+++ b/templates/backoffice/includes/sidenav-gestor.html
@@ -7,6 +7,9 @@
                 <h1>Music Engine S.L.</h1>
             </a>
         </div>
+        <div class="align-items-center text-center">
+            <h3>GESTOR</h3>
+        </div>
         <div class="navbar-inner">
             <!-- Collapse -->
             <div class="collapse navbar-collapse" id="sidenav-collapse-main">
