--- a/templates/backoffice/includes/sidenav-comercial.html
+++ b/templates/backoffice/includes/sidenav-comercial.html
@@ -31,6 +31,13 @@
                 </h6>
                 <!-- Navigation -->
                 <ul class="navbar-nav mb-md-3">
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'material_list' in segment %} active {% endif %}"
+                           href="{% url 'material_list' %}">
+                            <i class="ni ni-atom text-primary"></i>
+                            <span class="nav-link-text">Material</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
