redo url , function names, other

--- a/templates/backoffice/material.html
+++ b/templates/backoffice/material.html
@@ -80,7 +80,7 @@
                                             <a class="dropdown-item"
                                                href="{% url 'material_delete' %}{{ t.id }}">Borrar</a>
                                             <a class="dropdown-item"
-                                               href="{% url 'material_update' %}{{ t.id }}">Actualitzar</a>
+                                               href="{% url 'material_edit' %}{{ t.id }}">Actualitzar</a>
                                         </div>
                                     </div>
                                 </td>
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <form method="post" action="{% url 'material_create'%}{% if form.instance.id is not None %}/{{ form.instance.id }}{% endif %}">
+                        <form method="post" action="{% url 'material_save'%}{% if form.instance.id is not None %}/{{ form.instance.id }}{% endif %}">
                             {% csrf_token %}
                             <div class="pl-lg-4">
                                 <div class="form-group">
