--- a/templates/backoffice/includes/sidenav-comercial.html
+++ b/templates/backoffice/includes/sidenav-comercial.html
@@ -22,14 +22,18 @@
                             <span class="nav-link-text">Home</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'horas_tecnicos_list' in segment %} active {% endif %}"
+                           href="{% url 'horas_tecnicos_list' %}">
+                            <i class="ni ni-watch-time text-primary"></i>
+                            <span class="nav-link-text">Hores Tècnics</span>
+                        </a>
+                    </li>
                 </ul>
-                <!-- Divider -->
                 <hr class="my-3">
-                <!-- Heading -->
                 <h6 class="navbar-heading p-0 text-muted">
                     <span class="docs-normal">Objectes</span>
                 </h6>
-                <!-- Navigation -->
                 <ul class="navbar-nav mb-md-3">
                     <li class="nav-item">
                         <a class="nav-link {% if 'material_list' in segment %} active {% endif %}"
