--- a/templates/backoffice/includes/sidenav-comercial.html
+++ b/templates/backoffice/includes/sidenav-comercial.html
@@ -29,6 +29,13 @@
                             <span class="nav-link-text">Hores Tècnics</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'facturas_list' in segment %} active {% endif %}"
+                           href="{% url 'facturas_list' %}">
+                            <i class="ni ni-folder-17 text-primary"></i>
+                            <span class="nav-link-text">Facturas</span>
+                        </a>
+                    </li>
                 </ul>
                 <hr class="my-3">
                 <h6 class="navbar-heading p-0 text-muted">
