--- a/templates/backoffice/includes/sidenav-root.html
+++ b/templates/backoffice/includes/sidenav-root.html
@@ -36,6 +36,13 @@
                             <span class="nav-link-text">Hores Tècnics</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'facturas_list' in segment %} active {% endif %}"
+                           href="{% url 'facturas_list' %}">
+                            <i class="ni ni-folder-17 text-primary"></i>
+                            <span class="nav-link-text">Facturas</span>
+                        </a>
+                    </li>
                 </ul>
                 <!-- Divider -->
                 <hr class="my-3">
