--- a/templates/backoffice/factura_view.html
+++ b/templates/backoffice/factura_view.html
@@ -17,7 +17,7 @@
                         <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
                             <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                                 <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
-                                <li class="breadcrumb-item"><a href="#">Reserves</a></li>
+                                <li class="breadcrumb-item"><a href="#">Factura</a></li>
                                 <li class="breadcrumb-item active" aria-current="page"><a href="#">Nova</a></li>
 
                             </ol>
@@ -32,7 +32,8 @@
     <div class="container-fluid mt--6">
         <div class="row">
             <div class="card col-xl-12">
-                <form method="post" action="{% url 'facturas_save'%}{% if factura.instance.id is not None %}/{{ factura.instance.id }}{% endif %}">
+                <form method="post" action="
+                        {% url 'facturas_save' %}{% if factura.instance.id is not None %}/{{ factura.instance.id }}{% endif %}">
                     {% csrf_token %}
                     <div class="card-header border-0">
                         <div class="row align-items-center">
@@ -50,7 +51,24 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="form-group">
-                                        <label class="form-control-label" for="input-address">{{ factura.fecha.label }}</label>
+                                        <label class="form-control-label"
+                                               for="input-nombre_cliente">{{ factura.nombre_cliente.label }}</label>
+                                        {{ factura.nombre_cliente }}
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="form-group">
+                                        <label class="form-control-label"
+                                               for="input-dni">{{ factura.dni.label }}</label>
+                                        {{ factura.dni }}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <div class="form-group">
+                                        <label class="form-control-label"
+                                               for="input-address">{{ factura.fecha.label }}</label>
                                         {{ factura.fecha }}
                                     </div>
                                 </div>
@@ -67,39 +85,40 @@
                                     </div>
                                 </div>
                             </div>
-                        <div class="row">
-                            <table class="table is-fullwidth is-bordered is-hoverable is-striped">
-                                <tbody>
+                            <div class="row">
+                                <table class="table is-fullwidth is-bordered is-hoverable is-striped">
+                                    <tbody>
                                     <thead>
+                                    <tr>
+                                        <th>Concepte</th>
+                                        <th>Quantitat</th>
+                                        <th>Preu</th>
+                                        <th>Total</th>
+                                        <th></th>
+                                    </tr>
+                                    {{ linea_factura.management_form }}
+                                    {% for form in linea_factura %}
                                         <tr>
-                                            <th>Concepte</th>
-                                            <th>Quantitat</th>
-                                            <th>Preu</th>
-                                            <th>Total</th>
-                                            <th></th>
-                                        </tr>
-                                        {{ linea_factura.management_form }}
-                                        {% for form in linea_factura %}
-                                        <tr>
-                                            <td>{{form.concepto }}</td>
-                                            <td>{{form.cantidad}}</td>
-                                            <td>{{form.precio}}</td>
+                                            <td>{{ form.concepto }}</td>
+                                            <td>{{ form.cantidad }}</td>
+                                            <td>{{ form.precio }}</td>
                                             <td class="amount"></td>
-                                            <td>{{form.rate}}</td>
+                                            <td>{{ form.rate }}</td>
                                             <td>
                                                 <div class="input-group-append">
                                                     <button
-                                                        class="button is-small btn btn-success add-form-row">+</button>&nbsp;
+                                                            class="button is-small btn btn-success add-form-row">+
+                                                    </button>&nbsp;
                                                     <!-- <button class="button is-small btn btn-warning remove-form-row">-</button> -->
                                                 </div>
                                             </td>
                                         </tr>
-                                        {% endfor %}
+                                    {% endfor %}
                                     </thead>
-                                </tbody>
+                                    </tbody>
 
-                            </table>
-                        </div>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </form>
@@ -118,93 +137,107 @@
     <script src="/static/assets/vendor/chart.js/dist/Chart.extension.js"></script>
 
     <script type="text/javascript">
-    $('table input').on("input", function () {
-        var total = []
-        var $tr = $(this).closest('tr');
-        var textValue1 = $("input.rate", $tr).val();
-        var textValue2 = $('input.quantity', $tr).val();
-        amt = textValue1 * textValue2;
-        // console.log(amt);
-        $('.amount', $tr).html(amt);
-        calc_total();
-    });
-
-    function calc_total() {
-        var sum = 0;
-        $(".amount").each(function () {
-            sum += parseFloat($(this).text());
+        $('table input').on("input", function () {
+            var total = []
+            var $tr = $(this).closest('tr');
+            var textValue1 = $("input.rate", $tr).val();
+            var textValue2 = $('input.quantity', $tr).val();
+            amt = textValue1 * textValue2;
+            // console.log(amt);
+            $('.amount', $tr).html(amt);
+            calc_total();
         });
-        console.log(sum);
-        $('#total').text(sum);
-        $('#total').val(sum);
-    }
-</script>
 
-
-<script type="text/javascript">
-    function updateElementIndex(el, prefix, ndx) {
-        var id_regex = new RegExp('(' + prefix + '-\\d+)');
-        var replacement = prefix + '-' + ndx;
-        if ($(el).attr("for")) $(el).attr("for", $(el).attr("for").replace(id_regex, replacement));
-        if (el.id) el.id = el.id.replace(id_regex, replacement);
-        if (el.name) el.name = el.name.replace(id_regex, replacement);
-    }
-    function cloneMore(selector, prefix) {
-        var newElement = $(selector).clone(true);
-        console.log(newElement);
-        var total = $('#id_' + prefix + '-TOTAL_FORMS').val();
-        newElement.find(':input:not([type=button]):not([type=submit]):not([type=reset])').each(function () {
-            var name = $(this).attr('name')
-            if (name) {
-                name = name.replace('-' + (total - 1) + '-', '-' + total + '-');
-                var id = 'id_' + name;
-                $(this).attr({ 'name': name, 'id': id }).val('').removeAttr('checked');
-            }
-        });
-        newElement.find('label').each(function () {
-            var forValue = $(this).attr('for');
-            if (forValue) {
-                forValue = forValue.replace('-' + (total - 1) + '-', '-' + total + '-');
-                $(this).attr({ 'for': forValue });
-            }
-        });
-        total++;
-        $('#id_' + prefix + '-TOTAL_FORMS').val(total);
-        $(selector).after(newElement);
-        // $("div.form-row.button.is-primary").not(":last").hide();
-        // var conditionRow = $('.form-row:not(:last)');
-        // conditionRow.find('.button.is-primary')
-        // .hide();
-        // .removeClass('btn-success').addClass('btn-danger')
-        // .removeClass('add-form-row').addClass('remove-form-row')
-        // .html('-');
-        return false;
-    }
-    function deleteForm(prefix, btn) {
-        var total = parseInt($('#id_' + prefix + '-TOTAL_FORMS').val());
-        if (total > 1) {
-            btn.closest('.form-row').remove();
-            var forms = $('.form-row');
-            $('#id_' + prefix + '-TOTAL_FORMS').val(forms.length);
-            for (var i = 0, formCount = forms.length; i < formCount; i++) {
-                $(forms.get(i)).find(':input').each(function () {
-                    updateElementIndex(this, prefix, i);
-                });
-            }
+        function calc_total() {
+            var sum = 0;
+            $(".amount").each(function () {
+                sum += parseFloat($(this).text());
+            });
+            console.log(sum);
+            $('#total').text(sum);
+            $('#total').val(sum);
         }
-        return false;
-    }
-    $(document).on('click', '.add-form-row', function (e) {
-        e.preventDefault();
-        cloneMore('table tr:last', 'form');
-        return false;
-    });
-    $(document).on('click', '.remove-form-row', function (e) {
-        e.preventDefault();
-        deleteForm('form', $(this));
-        return false;
-    });
 
-</script>
+        var reserves = {{facturas_encoded|safe}};
+
+        function fillFields(selection) {
+            reserves.forEach(function (r) {
+                if (r.pk === parseInt(selection.value)) {
+                    jQuery(".nombre_cliente").val(r.fields.nombre_cliente);
+                    jQuery(".dni").val(r.fields.DNI);
+                }
+            });
+        }
+    </script>
+
+
+    <script type="text/javascript">
+        function updateElementIndex(el, prefix, ndx) {
+            var id_regex = new RegExp('(' + prefix + '-\\d+)');
+            var replacement = prefix + '-' + ndx;
+            if ($(el).attr("for")) $(el).attr("for", $(el).attr("for").replace(id_regex, replacement));
+            if (el.id) el.id = el.id.replace(id_regex, replacement);
+            if (el.name) el.name = el.name.replace(id_regex, replacement);
+        }
+
+        function cloneMore(selector, prefix) {
+            var newElement = $(selector).clone(true);
+            console.log(newElement);
+            var total = $('#id_' + prefix + '-TOTAL_FORMS').val();
+            newElement.find(':input:not([type=button]):not([type=submit]):not([type=reset])').each(function () {
+                var name = $(this).attr('name')
+                if (name) {
+                    name = name.replace('-' + (total - 1) + '-', '-' + total + '-');
+                    var id = 'id_' + name;
+                    $(this).attr({'name': name, 'id': id}).val('').removeAttr('checked');
+                }
+            });
+            newElement.find('label').each(function () {
+                var forValue = $(this).attr('for');
+                if (forValue) {
+                    forValue = forValue.replace('-' + (total - 1) + '-', '-' + total + '-');
+                    $(this).attr({'for': forValue});
+                }
+            });
+            total++;
+            $('#id_' + prefix + '-TOTAL_FORMS').val(total);
+            $(selector).after(newElement);
+            // $("div.form-row.button.is-primary").not(":last").hide();
+            // var conditionRow = $('.form-row:not(:last)');
+            // conditionRow.find('.button.is-primary')
+            // .hide();
+            // .removeClass('btn-success').addClass('btn-danger')
+            // .removeClass('add-form-row').addClass('remove-form-row')
+            // .html('-');
+            return false;
+        }
+
+        function deleteForm(prefix, btn) {
+            var total = parseInt($('#id_' + prefix + '-TOTAL_FORMS').val());
+            if (total > 1) {
+                btn.closest('.form-row').remove();
+                var forms = $('.form-row');
+                $('#id_' + prefix + '-TOTAL_FORMS').val(forms.length);
+                for (var i = 0, formCount = forms.length; i < formCount; i++) {
+                    $(forms.get(i)).find(':input').each(function () {
+                        updateElementIndex(this, prefix, i);
+                    });
+                }
+            }
+            return false;
+        }
+
+        $(document).on('click', '.add-form-row', function (e) {
+            e.preventDefault();
+            cloneMore('table tr:last', 'form');
+            return false;
+        });
+        $(document).on('click', '.remove-form-row', function (e) {
+            e.preventDefault();
+            deleteForm('form', $(this));
+            return false;
+        });
+
+    </script>
 
 {% endblock javascripts %}
