--- a/templates/backoffice/factura_view.html
+++ b/templates/backoffice/factura_view.html
@@ -235,7 +235,7 @@
 
         $(document).on('click', '.add-form-row', function (e) {
             e.preventDefault();
-            cloneMore('table tr:last', 'form');
+            cloneMore('table tr:last', 'linea_factura');
             return false;
         });
         $(document).on('click', '.remove-form-row', function (e) {
