link template fix

--- a/templates/authentication/includes/navigation.html
+++ b/templates/authentication/includes/navigation.html
@@ -24,7 +24,7 @@
               <i class="ni ni-single-02"></i>
               <span>My profile</span>
             </a>
-            <a target="_blank" href="http://appseed.us/support" class="dropdown-item">
+            <a  href="http://appseed.us/support" class="dropdown-item">
               <i class="ni ni-support-16"></i>
               <span>Support</span>
             </a>-->
