--- a/templates/authentication/includes/sidenav.html
+++ b/templates/authentication/includes/sidenav.html
@@ -29,8 +29,8 @@
         <ul class="navbar-nav mb-md-3">
           <li class="nav-item">
             <a class="nav-link" 
-               target="_blank" 
-               href="https://appseed.us/admin-dashboards/django-dashboard-argon">
+
+               href="#">
               <i class="ni ni-archive-2"></i>
               <span class="nav-link-text">Test</span>
             </a>
