--- a/templates/authentication/layouts/base-fullscreen.html
+++ b/templates/authentication/layouts/base-fullscreen.html
@@ -15,7 +15,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="canonical" href="https://appseed.us/admin-dashboards/django-dashboard-argon">
+  <link rel="canonical" href="#">
   
   <title>
         {% block title %}{% endblock %} | MusicEngine S.L. | UdL
@@ -48,8 +48,8 @@
           <div class="row justify-content-center">
             <div class="col-lg-5 col-md-6">
               <h1 class="text-white">
-                <a target="_blank" class="text-white"
-                   href="https://appseed.us/admin-dashboards/django-dashboard-argon">Music Engine S.L.</a>
+                <a  class="text-white"
+                   href="#">Music Engine S.L.</a>
               </h1>
               <p class="text-lead text-light">
                 Lloguer i gestió de sales musicals.
