--- a/templates/backoffice/includes/footer-fullscreen.html
+++ b/templates/backoffice/includes/footer-fullscreen.html
@@ -3,9 +3,9 @@
         <div class="row align-items-center justify-content-xl-between">
             <!--<div class="col-xl-6">
               <div class="copyright text-center text-xl-left text-muted">
-                  <a target="_blank"
+                  <a
                      href="https://appseed.us/admin-dashboards/django"
-                     class="font-weight-bold ml-1" target="_blank">More Dashboards</a>
+                     class="font-weight-bold ml-1" >More Dashboards</a>
               </div>
             </div>-->
             <div class="col-xl-6">
