--- a/templates/authentication/includes/footer.html
+++ b/templates/authentication/includes/footer.html
@@ -5,7 +5,7 @@
           <!--<div class="col-xl-6">
             <div class="text-center text-xl-left text-muted">
               <a href="https://appseed.us/admin-dashboards/django" 
-                 class="font-weight-bold ml-1" target="_blank">More Dashboards</a>
+                 class="font-weight-bold ml-1" >More Dashboards</a>
             </div>
           </div>-->
           <div class="col-xl-6">
