--- a/templates/backoffice/layouts/base-fullscreen.html
+++ b/templates/backoffice/layouts/base-fullscreen.html
@@ -15,7 +15,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="canonical" href="https://appseed.us/admin-dashboards/django-dashboard-argon">
+    <link rel="canonical" href="#">
 
     <title>
         {% block title %}{% endblock %} | MusicEngine S.L. | UdL
@@ -48,12 +48,12 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-5 col-md-6">
                         <h1 class="text-white">
-                            <a target="_blank" class="text-white"
-                               href="https://appseed.us/admin-dashboards/django-dashboard-argon">Django Argon</a>
+                            <a  class="text-white"
+                               href="#">Django Argon</a>
                         </h1>
                         <p class="text-lead text-light">
                             Open-Source Flask Starter with Argon Design
-                            Coded by <a target="_blank" class="text-white" href="https://appseed.us">AppSeed</a>.
+                            Coded by <a  class="text-white" href="https://appseed.us">AppSeed</a>.
                         </p>
                     </div>
                 </div>
