--- a/templates/backoffice/layouts/base.html
+++ b/templates/backoffice/layouts/base.html
@@ -19,7 +19,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="canonical" href="https://appseed.us/admin-dashboards/django-dashboard-argon">
+    <link rel="canonical" href="#">
 
     <title>
         {% block title %}{% endblock %} | MusicEngine S.L. | UdL
