--- a/templates/public/home.html
+++ b/templates/public/home.html
@@ -7,19 +7,22 @@
 
 {% block content %}
 
-    <!-- Page content -->
-    <div class="container mt--8 pb-5">
-      <div class="row justify-content-center">
-        <div class="col-lg-5 col-md-7">
-          <div class="card bg-secondary shadow border-0">
-            <div class="card-header bg-transparent pb-5">
-            </div>
-            <div class="card-body px-lg-5 py-lg-5">
+    <div class="container">
+        <div class="header-body text-center mb-7">
+          <div class="row justify-content-center">
+            <div class="col-lg-5 col-md-6">
+              <h1 class="text-white">
+                <a class="text-white" href="#">Music Engine S.L.</a>
+              </h1>
+              <p class="text-lead text-light">
+                Lloguer i gestió de sales musicals.
+              </p>
             </div>
           </div>
         </div>
       </div>
-    </div>
+
+
 
 {% endblock content %}
 
