--- a/templates/public/layouts/base-fullscreen.html
+++ b/templates/public/layouts/base-fullscreen.html
@@ -42,20 +42,10 @@
     {% include "public/includes/navigation-fullscreen.html" %}
 
     <!-- Header -->
-    <div class="header bg-gradient-primary py-7 py-lg-8">
+    <div class="header bg-gradient-primary py-lg-1">
       <div class="container">
         <div class="header-body text-center mb-7">
-          <div class="row justify-content-center">
-            <div class="col-lg-5 col-md-6">
-              <h1 class="text-white">
-                <a class="text-white"
-                   href="#">Music Engine S.L.</a>
-              </h1>
-              <p class="text-lead text-light">
-                Lloguer i gestió de sales musicals.
-              </p>
-            </div>
-          </div>
+
         </div>
       </div>
       <div class="separator separator-bottom separator-skew zindex-100">
@@ -64,7 +54,7 @@
         </svg>
       </div>
     </div>
-    
+
     {% block content %}{% endblock content %}
 
     {% include "public/includes/footer-fullscreen.html" %}
